Closed Bug 839257 Opened 13 years ago Closed 13 years ago

Factory.cpp:70:1: warning: ‘bool HasCPUIDBit(unsigned int, CPUIDRegister, unsigned int)’ defined but not used [-Wunused-function]

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Build warning: { gfx/2d/Factory.cpp:70:1: warning: ‘bool HasCPUIDBit(unsigned int, CPUIDRegister, unsigned int)’ defined but not used [-Wunused-function] } We define HasCPUIDBit() if cpuid.h is available, but then we only actually use it in a more restricted set of circumstances (if the first #if clause in Factory::HasSSE2() fails). We can fix this by just marking the HasCPUIDBit impls as inline.
Attached patch fix v1Splinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #711517 - Flags: review?
Attachment #711517 - Flags: review? → review?(bas)
Blocks: 839269
Attachment #711517 - Flags: review?(bas) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: