Bug 839257: Mark Factory.cpp's HasCPUIDBit() as inline, to fix build warnings on some configurations about the function being defined but not used. r=Bas